# azure-keyvault-tool

./: .gitignore  Azure_kv_tool.py  Azure_kv_tool.spec  README.md  app.rc  generate_env_yml.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
electron/: backend.js  index.html  main.js  package-lock.json  package.json  renderer.js  style.css
