[tool.poetry]
name = "azure keyvault tool"
version = "0.1.0"
description = ""
authors = ["thealexfok <thisisalexfok@gmail.com>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pyyaml = "^6.0.1"
pyqt6 = "^6.7.0"
azure-keyvault-secrets = "^4.8.0"
azure-identity = "^1.16.0"
requests = "^2.32.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.build]
optional = true

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.7.0"

[tool.poetry.group.build.dependencies]
pyinstaller = "^6.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
